[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Golden Age.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Instructions.gd" type="Script" id=2]
[ext_resource path="res://assets/music/RetroPlatforming.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Fassets/Golden Age.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Instructions" type="Node"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "How to move the player:
 
the arrow keys move the player accordingly

each level has its own objective

click on the buttons below to learn the objectives of each level and player movement






press tab key to return to title screen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="level_1" type="Button" parent="."]
margin_left = 225.0
margin_top = 337.0
margin_right = 406.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 2 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_2" type="Button" parent="."]
margin_left = 420.0
margin_top = 337.0
margin_right = 601.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 3 )
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_3" type="Button" parent="."]
margin_left = 615.0
margin_top = 337.0
margin_right = 796.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 4 )
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level_3" to="." method="_on_level_3_pressed"]
